--- a/blank.html
+++ b/blank.html
@@ -11,7 +11,7 @@
       </a>
       <nav>
         <ul>
-          <li><a href="blank.html">Главная</a></li> 
+          <li><a>Главная</a></li>
           <li><a href="blank.html">Компания</a></li>
           <li><a href="blank.html">Каталог</a></li>
           <li><a href="blank.html">Новости</a></li>
@@ -19,24 +19,28 @@
           <li><a href="blank.html">Доставка</a></li>
           <li><a href="blank.html">Контакты</a></li>
         </ul>
+      </nav>
+      <section>
         <ul>
           <li><a href="blank.html">Войти</a></li>
           <li><a href="blank.html">Регистрация</a></li>
         </ul>
+      </section>
+      <section>
         <ul>
           <li><a href="blank.html">Закладки</a></li>
           <li><a href="blank.html">Корзина</a></li>
           <li><a href="blank.html">Оформить заказ</a></li>
         </ul>
-      </nav>
+      </section>
       <form>
         <input type="search" placeholder="Поиск:">
       </form>
-      <p>Интернет-магазин <br> строительных материалов <br> и инструментов для ремонта</p>
-      <p><a href="tel:+78005558628">+7 800 555-86-28</a></p>
+      <h1>Интернет-магазин строительных материалов и инструментов для ремонта</h1>
+      <a href="tel:+78005558628">+7 800 555-86-28</a>
       <p>г. Санкт-Петербург, наб. Реки Карповки, 5 лит П</p> 
     </header> 
-    <h1>Страница заглушка.</h1>
+    <p>Страница заглушка.</p>
     <footer>
       <section>
         <h2>Ссылки на основные разделы сайта</h2>
@@ -104,10 +108,8 @@
           </li>
         </ul>
       </section>
-      <section>
-        <p> Обратная связь: <br> <a href="https://htmlacademy.ru/intensive/htmlcss">mail@htmlacademy.ru</a> </p>
-      </section>
-      <section>
-        <p> Разработано — <br> <a href="https://htmlacademy.ru/ " target="blank">htmlacademy.ru</a> </p>
-      </section>
+        <p>Обратная связь: <a href="https://htmlacademy.ru/intensive/htmlcss">mail@htmlacademy.ru</a></p>
+        <p>Разработано — <a href="https://htmlacademy.ru/ " target="blank">htmlacademy.ru</a></p>
     </footer>
+  </body>
+</html>
