--- a/catalog.html
+++ b/catalog.html
@@ -11,7 +11,7 @@
       </a>
       <nav>
         <ul>
-          <li><a href="blank.html">Главная</a></li> 
+          <li><a>Главная</a></li>
           <li><a href="blank.html">Компания</a></li>
           <li><a href="blank.html">Каталог</a></li>
           <li><a href="blank.html">Новости</a></li>
@@ -19,22 +19,23 @@
           <li><a href="blank.html">Доставка</a></li>
           <li><a href="blank.html">Контакты</a></li>
         </ul>
+      </nav>
+      <section>
         <ul>
           <li><a href="blank.html">Войти</a></li>
           <li><a href="blank.html">Регистрация</a></li>
         </ul>
+      </section>
+      <section>
         <ul>
           <li><a href="blank.html">Закладки</a></li>
           <li><a href="blank.html">Корзина</a></li>
           <li><a href="blank.html">Оформить заказ</a></li>
         </ul>
-      </nav>
+      </section>
       <form>
         <input type="search" placeholder="Поиск:">
       </form>
-      <!-- Вопрос наставнику:
-      По поводу секции ниже, хочеться ее как то озаглавить, например <h2>Информация из личного кабинета</h2>. 
-      Но так как эта секция находится в хедере, я не знаю нужен ли тут заголовок. -->
       <section>
         <a href="blank.html"> <img src="https://via.placeholder.com/20x18" width="20" height="18" alt="Лототип пользователя">
           <p>Равшан Джамшутович</p>
@@ -42,26 +43,20 @@
         <ul>
           <li><a href="blank.html">Мои заказы</a></li>
           <li><a href="blank.html">Личный кабинет</a></li>
-          <li><a href="blank.html"> <img src="https://via.placeholder.com/20x18" width="20" height="18" alt="Выйти из личного кабинета"></a></li>
         </ul>
+        <a href="blank.html"> <img src="https://via.placeholder.com/20x18" width="20" height="18" alt="Выйти из личного кабинета"></a>
       </section>
-      <!-- Вопрос наставнику:
-        Ниже сгрупировал абзацем элементы по семантике. Можно оборачивать в абзац элемент, если он один, как ccылка здесь? -->
-      <p>Интернет-магазин <br> строительных материалов <br> и инструментов для ремонта</p>
-      <p><a href="tel:+78005558628">+7 800 555-86-28</a></p>
+      <p>Интернет-магазин строительных материалов и инструментов для ремонта</p>
+      <a href="tel:+78005558628">+7 800 555-86-28</a>
       <p>г. Санкт-Петербург, наб. Реки Карповки, 5 лит П</p> 
     </header> 
     <main>
-      <!-- Вопрос наставнику:
-      Хочется озаглавить секцию ниже <h2>Раздел в котором Вы находитесь</h2>,на лайве преподаватель не озаглавливал "хлебные крошки". 
-      Стоит ли озаглавить?
-      Второй вопрос, по семантике иконка домика подходит в этот список, я ее добавил не смотря на то, что это различные теги, можно так делать?-->
       <section>
         <ul>
           <li><a href="index.html"><img src="https://via.placeholder.com/12x14" height="12" width="14" alt="Главная страница"></a></li>
           <li><a href="blank.html">Каталог</a></li>
           <li><a href="blank.html">Инструмент</a></li>
-          <li>Перфораторы</li>
+          <li><a>Перфораторы</a></li>
         </ul>
       </section>
       <section>
@@ -71,11 +66,9 @@
           <form action="https://echo.htmlacademy.ru" method="get">
             <fieldset>
               <legend>Цена</legend>
-              <input type="range" min="0" max="30000" value="25000" disabled>
-              <p>
-                <input type="number" value="0" disabled> -
-                <input type="number" value="30000" disabled>
-              </p>
+              <input type="range" min="0" max="30000" value="25000">
+              <input type="number" value="0"> -
+              <input type="number" value="30000">
             </fieldset>
             <fieldset>
               <legend>Производители</legend>
@@ -113,6 +106,8 @@
             <li><button type="button" >ПО ЦЕНЕ</button></li>
             <li><button type="button" >ПО ТИПУ</button></li>
             <li><button type="button" >ПО ФУНКЦИОНАЛУ</button></li>
+          </ul>  
+          <ul>
             <li><button type="button" >От меньшего к большему</button></li>
             <li><button type="button" >От большего к меньшему</button></li>
           </ul>
@@ -123,9 +118,9 @@
             <li>
               <a href="blank.html">
                 <img src="https://via.placeholder.com/220x318" width="220" height="318" alt="">
-                <p>Перфоратор BOSCH <br> BFG 6000</p>
+                <p>Перфоратор BOSCH BFG 6000</p>
                 <p>
-                  <del>30500 Р.</del> <br>
+                  <del>30500 Р.</del>
                   <ins>25500 Р.</ins>
                 </p>
               </a>
@@ -137,9 +132,9 @@
             <li>
               <a href="blank.html">
                 <img src="https://via.placeholder.com/220x318" width="220" height="318" alt="">
-                <p>Перфоратор BOSCH <br> BFG 6000</p>
+                <p>Перфоратор BOSCH BFG 6000</p>
                 <p>
-                  <del>30500 Р.</del> <br>
+                  <del>30500 Р.</del>
                   <ins>25500 Р.</ins>
                 </p>
               </a>
@@ -151,9 +146,9 @@
             <li>
               <a href="blank.html">
                 <img src="https://via.placeholder.com/220x318" width="220" height="318" alt="">
-                <p>Перфоратор BOSCH <br> BFG 6000</p>
+                <p>Перфоратор BOSCH BFG 6000</p>
                 <p>
-                  <del>30500 Р.</del> <br>
+                  <del>30500 Р.</del>
                   <ins>25500 Р.</ins>
                 </p>
               </a>
@@ -165,9 +160,9 @@
             <li>
               <a href="blank.html">
                 <img src="https://via.placeholder.com/220x318" width="220" height="318" alt="">
-                <p>Перфоратор BOSCH <br> BFG 3000</p>
+                <p>Перфоратор BOSCH BFG 3000</p>
                 <p>
-                  <del>22500 Р.</del> <br>
+                  <del>22500 Р.</del>
                   <ins>15500 Р.</ins>
                 </p> 
               </a>
@@ -179,9 +174,9 @@
             <li>
               <a href="blank.html">
                 <img src="https://via.placeholder.com/220x318" width="220" height="318" alt="">
-                <p>Перфоратор BOSCH <br> BFG 6000</p>
+                <p>Перфоратор BOSCH BFG 6000</p>
                 <p>
-                  <del>30500 Р.</del> <br>
+                  <del>30500 Р.</del>
                   <ins>25500 Р.</ins>
                 </p>
               </a>
@@ -193,7 +188,7 @@
             <li>
               <a href="blank.html">
                 <img src="https://via.placeholder.com/220x318" width="220" height="318" alt="">
-                <p>Перфоратор BOSCH <br> BFG 2000</p>
+                <p>Перфоратор BOSCH BFG 2000</p>
                 <p>12500 Р.</p>
               </a>
               <p>
@@ -204,9 +199,9 @@
             <li>
               <a href="blank.html">
                 <img src="https://via.placeholder.com/220x318" width="220" height="318" alt="">
-                <p>Перфоратор BOSCH <br> BFG 3000</p>
+                <p>Перфоратор BOSCH BFG 3000</p>
                 <p>
-                  <del>22500 Р.</del> <br>
+                  <del>22500 Р.</del>
                   <ins>15500 Р.</ins>
                 </p> 
               </a>
@@ -218,9 +213,9 @@
             <li>
               <a href="blank.html">
                 <img src="https://via.placeholder.com/220x318" width="220" height="318" alt="">
-                <p>Перфоратор BOSCH <br> BFG 6000</p>
+                <p>Перфоратор BOSCH BFG 6000</p>
                 <p>
-                  <del>30500 Р.</del> <br>
+                  <del>30500 Р.</del>
                   <ins>25500 Р.</ins>
                 </p>
               </a>
@@ -232,7 +227,7 @@
             <li>
               <a href="blank.html">
                 <img src="https://via.placeholder.com/220x318" width="220" height="318" alt="">
-                <p>Перфоратор BOSCH <br> BFG 2000</p>
+                <p>Перфоратор BOSCH BFG 2000</p>
                 <p>12500 Р.</p>
               </a>
               <p>
@@ -241,21 +236,21 @@
               </p>
             </li>
           </ul>
-          <!-- Вопрос наставнику:
-          Может объеденить ниже кнопки с маркированным списком? -->
           <button type="button" disabled>Предыдущая</button>
           <ul>
-            <li>1</li>
+            <li><a>1</a></li>
             <li><a href="blank.html">2</a></li>
             <li><a href="blank.html">3</a></li>
           </ul>
           <button type="button">Следующая</button>
         </section>
-        <h2>ПАРА СЛОВ О ПЕРФОРАТОРАХ</h2>
-        <p>Перфоратор — универсальный строительный инструмент. Предназначен для сверления и долбления отверстий в кирпиче, бетоне и камне.
-          Существуют электромеханические и пневматические перфораторы. Современные модели могут выполнять функции дрели, шуруповерта и отбойного молотка. 
-          В ассортиментном ряду есть выбор «трехрежимников»: в одном устройстве будут совмещены отбойный молоток и ударная дрель.
-        </p>
+        <section>
+          <h2>ПАРА СЛОВ О ПЕРФОРАТОРАХ</h2>
+          <p>Перфоратор — универсальный строительный инструмент. Предназначен для сверления и долбления отверстий в кирпиче, бетоне и камне.
+            Существуют электромеханические и пневматические перфораторы. Современные модели могут выполнять функции дрели, шуруповерта и отбойного молотка. 
+            В ассортиментном ряду есть выбор «трехрежимников»: в одном устройстве будут совмещены отбойный молоток и ударная дрель.
+          </p>
+        </section>
       </section>
     </main>
     <footer>
@@ -299,11 +294,11 @@
       <section>
         <h2>Наши контакты</h2>
         <p>г. Санкт-Петербург, наб. Реки Карповки, 5 лит П</p> 
-        <p><a href="tel:+78005558628">+7 800 555-86-28</a></p>
+        <a href="tel:+78005558628">+7 800 555-86-28</a>
       </section>
       <section>
         <h2>Копирайт</h2>
-        <p>© 2010–2021 Компания «Техномарт» <br> Все права защищены</p>  
+        <p>© 2010–2021 Компания «Техномарт» Все права защищены</p>  
       </section>
       <section>
         <h2>Социальные сети</h2>
@@ -325,16 +320,16 @@
           </li>
         </ul>
       </section>
-      <section>
-        <p> Обратная связь: <br> <a href=" mailto:mail@htmlacademy.ru ">mail@htmlacademy.ru</a> </p>
-      </section>
-      <section>
-        <p> Разработано — <br> <a href="https://htmlacademy.ru/intensive/htmlcss" target="blank">htmlacademy.ru</a> </p>
-      </section>
+      <p>Обратная связь: <a href=" mailto:mail@htmlacademy.ru ">mail@htmlacademy.ru</a></p>
+      <p>Разработано — <a href="https://htmlacademy.ru/intensive/htmlcss" target="blank">htmlacademy.ru</a></p>
     </footer>
         
     <!-- Всплывающее окно -->
-    <img src="https://via.placeholder.com/66x66" width="66" height="66" alt="">
-    <p>Товар добавлен в корзину!</p>
-    <a href="blank.html">ОФОРМИТЬ ЗАКАЗ</a>
-    <button type="button">ПРОДОЛЖИТЬ ПОКУПКИ</button>  
+    <section>
+      <img src="https://via.placeholder.com/66x66" width="66" height="66" alt="">
+      <p>Товар добавлен в корзину!</p>
+      <a href="blank.html">ОФОРМИТЬ ЗАКАЗ</a>
+      <button type="button">ПРОДОЛЖИТЬ ПОКУПКИ</button>
+    </section>
+  </body>
+</html>
