--- a/blank.html
+++ b/blank.html
@@ -3,12 +3,29 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Техномарт</title>
+    <link rel="icon" href="img/favicon.ico">
+    <link rel="icon" href="img/favicon/icon.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="img/favicon/favicon180.png">
+    <link rel="manifest" href="manifest.webmanifest">
   </head>
   <body>
     <header>
       <a href="index.html">
-        <img src="https://via.placeholder.com/220x47" width="220" height="47" alt="Логотип магазина Техномарт">
+        <img src="img/logo-technomart.svg" width="108" height="18" alt="Логотип магазина Техномарт">
       </a>
+      <section>
+        <ul>
+          <li><a href="blank.html">Закладки</a></li>
+          <li><a href="blank.html">Корзина</a></li>
+          <li><a href="blank.html">Оформить заказ</a></li>
+        </ul>
+      </section>
+      <section>
+        <ul>
+          <li><a href="blank.html">Войти</a></li>
+          <li><a href="blank.html">Регистрация</a></li>
+        </ul>
+      </section>
       <nav>
         <ul>
           <li><a>Главная</a></li>
@@ -20,19 +37,6 @@
           <li><a href="blank.html">Контакты</a></li>
         </ul>
       </nav>
-      <section>
-        <ul>
-          <li><a href="blank.html">Войти</a></li>
-          <li><a href="blank.html">Регистрация</a></li>
-        </ul>
-      </section>
-      <section>
-        <ul>
-          <li><a href="blank.html">Закладки</a></li>
-          <li><a href="blank.html">Корзина</a></li>
-          <li><a href="blank.html">Оформить заказ</a></li>
-        </ul>
-      </section>
       <form>
         <input type="search" placeholder="Поиск:">
       </form>
@@ -45,7 +49,7 @@
       <section>
         <h2>Ссылки на основные разделы сайта</h2>
         <a href="index.html">
-          <img src="https://via.placeholder.com/220x68" width="220" height="68" alt="Логотип магазина Техномарт">
+          <img src="img/logo-technomart.svg" width="138" height="23" alt="Логотип магазина Техномарт">
         </a>
         <ul>
           <li>
