--- a/catalog.html
+++ b/catalog.html
@@ -3,12 +3,29 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Техномарт</title>
+    <link rel="icon" href="img/favicon.ico">
+    <link rel="icon" href="img/favicon/icon.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="img/favicon/favicon180.png">
+    <link rel="manifest" href="manifest.webmanifest">
   </head>
   <body>
     <header>
       <a href="index.html">
-        <img src="https://via.placeholder.com/220x47" width="220" height="47" alt="Логотип магазина Техномарт">
+        <img src="img/logo-technomart.svg" width="108" height="18" alt="Логотип магазина Техномарт">
       </a>
+      <section>
+        <ul>
+          <li><a href="blank.html">Закладки</a></li>
+          <li><a href="blank.html">Корзина</a></li>
+          <li><a href="blank.html">Оформить заказ</a></li>
+        </ul>
+      </section>
+      <section>
+        <ul>
+          <li><a href="blank.html">Войти</a></li>
+          <li><a href="blank.html">Регистрация</a></li>
+        </ul>
+      </section>
       <nav>
         <ul>
           <li><a>Главная</a></li>
@@ -20,19 +37,6 @@
           <li><a href="blank.html">Контакты</a></li>
         </ul>
       </nav>
-      <section>
-        <ul>
-          <li><a href="blank.html">Войти</a></li>
-          <li><a href="blank.html">Регистрация</a></li>
-        </ul>
-      </section>
-      <section>
-        <ul>
-          <li><a href="blank.html">Закладки</a></li>
-          <li><a href="blank.html">Корзина</a></li>
-          <li><a href="blank.html">Оформить заказ</a></li>
-        </ul>
-      </section>
       <form>
         <input type="search" placeholder="Поиск:">
       </form>
@@ -117,7 +121,7 @@
           <ul>
             <li>
               <a href="blank.html">
-                <img src="https://via.placeholder.com/220x318" width="220" height="318" alt="">
+                <img src="img/catalog/bosch-bfg-6000.jpg" width="144" height="128" alt="Перфоратор среднего размера с питанием от аккумулятора">
                 <p>Перфоратор BOSCH BFG 6000</p>
                 <p>
                   <del>30500 Р.</del>
@@ -131,7 +135,7 @@
             </li>
             <li>
               <a href="blank.html">
-                <img src="https://via.placeholder.com/220x318" width="220" height="318" alt="">
+                <img src="img/catalog/bosch-bfg-6000.jpg" width="144" height="128" alt="Перфоратор среднего размера с питанием от аккумулятора">
                 <p>Перфоратор BOSCH BFG 6000</p>
                 <p>
                   <del>30500 Р.</del>
@@ -145,7 +149,7 @@
             </li>
             <li>
               <a href="blank.html">
-                <img src="https://via.placeholder.com/220x318" width="220" height="318" alt="">
+                <img src="img/catalog/bosch-bfg-6000.jpg" width="144" height="128" alt="Перфоратор среднего размера с питанием от аккумулятора">
                 <p>Перфоратор BOSCH BFG 6000</p>
                 <p>
                   <del>30500 Р.</del>
@@ -159,7 +163,7 @@
             </li>
             <li>
               <a href="blank.html">
-                <img src="https://via.placeholder.com/220x318" width="220" height="318" alt="">
+                <img src="img/catalog/bosch-bfg-3000.jpg" width="127" height="112" alt="Маленкий перфоратор с питанием от аккумулятора">
                 <p>Перфоратор BOSCH BFG 3000</p>
                 <p>
                   <del>22500 Р.</del>
@@ -173,7 +177,7 @@
             </li>
             <li>
               <a href="blank.html">
-                <img src="https://via.placeholder.com/220x318" width="220" height="318" alt="">
+                <img src="img/catalog/bosch-bfg-6000.jpg" width="144" height="128" alt="Перфоратор среднего размера с питанием от аккумулятора">
                 <p>Перфоратор BOSCH BFG 6000</p>
                 <p>
                   <del>30500 Р.</del>
@@ -187,7 +191,7 @@
             </li>
             <li>
               <a href="blank.html">
-                <img src="https://via.placeholder.com/220x318" width="220" height="318" alt="">
+                <img src="img/catalog/bosch-bfg-2000.jpg" width="127" height="112" alt="Маленкий перфоратор с питанием от аккумулятора">
                 <p>Перфоратор BOSCH BFG 2000</p>
                 <p>12500 Р.</p>
               </a>
@@ -198,7 +202,7 @@
             </li>
             <li>
               <a href="blank.html">
-                <img src="https://via.placeholder.com/220x318" width="220" height="318" alt="">
+                <img src="img/catalog/bosch-bfg-3000.jpg" width="127" height="112" alt="Маленкий перфоратор с питанием от аккумулятора">
                 <p>Перфоратор BOSCH BFG 3000</p>
                 <p>
                   <del>22500 Р.</del>
@@ -212,7 +216,7 @@
             </li>
             <li>
               <a href="blank.html">
-                <img src="https://via.placeholder.com/220x318" width="220" height="318" alt="">
+                <img src="img/catalog/bosch-bfg-6000.jpg" width="144" height="128" alt="Перфоратор среднего размера с питанием от аккумулятора">
                 <p>Перфоратор BOSCH BFG 6000</p>
                 <p>
                   <del>30500 Р.</del>
@@ -226,7 +230,7 @@
             </li>
             <li>
               <a href="blank.html">
-                <img src="https://via.placeholder.com/220x318" width="220" height="318" alt="">
+                <img src="img/catalog/bosch-bfg-2000.jpg" width="127" height="112" alt="Маленкий перфоратор с питанием от аккумулятора">
                 <p>Перфоратор BOSCH BFG 2000</p>
                 <p>12500 Р.</p>
               </a>
@@ -257,7 +261,7 @@
       <section>
         <h2>Ссылки на основные разделы сайта</h2>
         <a href="index.html">
-          <img src="https://via.placeholder.com/220x68" width="220" height="68" alt="Логотип магазина Техномарт">
+          <img src="img/logo-technomart.svg" width="138" height="23" alt="Логотип магазина Техномарт">
         </a>
         <ul>
           <li>
