--- a/index.html
+++ b/index.html
@@ -3,10 +3,27 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Техномарт</title>
+    <link rel="icon" href="img/favicon.ico">
+    <link rel="icon" href="img/favicon/icon.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="img/favicon/favicon180.png">
+    <link rel="manifest" href="manifest.webmanifest">
   </head>
   <body>
     <header>
-      <img src="https://via.placeholder.com/220x47" width="220" height="47" alt="Логотип магазина Техномарт">
+      <img src="img/logo-technomart.svg" width="108" height="18" alt="Логотип магазина Техномарт">
+      <section>
+        <ul>
+          <li><a href="blank.html">Закладки</a></li>
+          <li><a href="blank.html">Корзина</a></li>
+          <li><a href="blank.html">Оформить заказ</a></li>
+        </ul>
+      </section>
+      <section>
+        <ul>
+          <li><a href="blank.html">Войти</a></li>
+          <li><a href="blank.html">Регистрация</a></li>
+        </ul>
+      </section>
       <nav>
         <ul>
           <li><a>Главная</a></li>
@@ -18,19 +35,6 @@
           <li><a href="blank.html">Контакты</a></li>
         </ul>
       </nav>
-      <section>
-        <ul>
-          <li><a href="blank.html">Войти</a></li>
-          <li><a href="blank.html">Регистрация</a></li>
-        </ul>
-      </section>
-      <section>
-        <ul>
-          <li><a href="blank.html">Закладки</a></li>
-          <li><a href="blank.html">Корзина</a></li>
-          <li><a href="blank.html">Оформить заказ</a></li>
-        </ul>
-      </section>
       <form>
       <input type="search" placeholder="Поиск:">
       </form>
@@ -41,6 +45,9 @@
     <main>
       <h1>Интернет-магазин "Техномарт"</h1>
       <section>
+        <!--Вопрос наставнику:
+        В этой секции в разметку добавил только контентные изображения, которые есть только в слайдере.
+        Если логотипы являются декоративными изображениями, нужен тут альт текст, который я добавлял ранее в разметку? -->
         <h2>Каталог товаров и услуг</h2>
         <ul>
           <li>
@@ -75,13 +82,13 @@
           <li>
             <p>Перфораторы</p>
             <p>Настоящие мужские игрушки</p>
-            <img src="https://via.placeholder.com/620x266" width="620" height="266" alt="Строитель сверлит стену с перфоратором в руках">
+            <img src="img/promo-block/slider/perforators.jpg" width="620" height="266" alt="Строитель сверлит стену с перфоратором в руках">
             <a href="catalog.html">Открыть каталог</a>
           </li>
           <li>
             <p>Дрели</p>
             <p>Соседям на радость!</p>
-            <img src="https://via.placeholder.com/620x266" width="620" height="266" alt="Строитель сверлит стену с аккумуляторной дрелью в руках">
+            <img src="img/promo-block/slider/drills.jpg" width="620" height="266" alt="Строитель сверлит стену с аккумуляторной дрелью в руках">
             <a href="blank.html">Открыть каталог</a>
           </li>
         </ul>
@@ -91,13 +98,12 @@
         </p>
       </section>
       <section>
-      <!-- Здесь размер картинок подобран под размер блоков, для однообразия. 
-      Сами блоки состоят из нескольких слоев, настоящие размеры картинок буду подбирать когда начну экспорт графики в проект.-->
         <h2>Популярные товары</h2>
+        <a href="blank.html">Все популярные товары</a>  
         <ul>
           <li>
             <a href="blank.html">
-              <img src="https://via.placeholder.com/220x318" width="220" height="318" alt="">
+              <img src="img/catalog/bosch-bfg-9000.jpg" width="184" height="164" alt="Большой перфоратор с питанием от сети">
               <p>Перфоратор BOSCH BFG 9000</p>
               <p>
                 <del>32500 Р.</del>
@@ -110,8 +116,10 @@
             </p>
           </li>
           <li>
-            <a href="blank.html">
-              <img src="https://via.placeholder.com/220x318" width="220" height="318" alt="">
+            <!-- Насколько я понимаю, красный элемент в углу с надписью "new" будет добавляться с помощью CSS, как псевдоэлемент.
+            Поэтому я его пока в разметку не добавлял. -->
+            <a href="blank.html"></a>
+              <img src="img/catalog/bosch-bfg-3000.jpg" width="127" height="112" alt="Маленкий перфоратор с питанием от аккумулятора">
               <p>Перфоратор BOSCH BFG 3000</p>
               <p>
                 <del>22500 Р.</del>
@@ -125,7 +133,7 @@
           </li>
           <li>
             <a href="blank.html">
-              <img src="https://via.placeholder.com/220x318" width="220" height="318" alt="">
+              <img src="img/catalog/bosch-bfg-6000.jpg" width="144" height="128" alt="Перфоратор среднего размера с питанием от аккумулятора">
               <p>Перфоратор BOSCH BFG 6000</p>
               <p>
                 <del>30500 Р.</del>
@@ -139,7 +147,7 @@
           </li>
           <li>
             <a href="blank.html">
-              <img src="https://via.placeholder.com/220x318" width="220" height="318" alt="">
+              <img src="img/catalog/bosch-bfg-2000.jpg" width="127" height="112" alt="Маленкий перфоратор с питанием от аккумулятора">
               <p>Перфоратор BOSCH BFG 2000</p>
               <p>
                 <del>22500 Р.</del>
@@ -152,53 +160,52 @@
             </p>
           </li>
         </ul>
-        <a href="blank.html">Все популярные товары</a>  
       </section>
       <section>
         <h2>Популярные производители</h2>
+        <a href="blank.html">Все производители</a>
         <ul>
           <li>
             <a href="blank.html">
-              <img src="https://via.placeholder.com/220x145" width="220" height="145"  alt="Логотип Bosch">
+              <img src="img/manufacturers/logo-bosch.png" width="126" height="37"  alt="Логотип Bosch">
             </a>
           </li>
           <li>
             <a href="blank.html">
-              <img src="https://via.placeholder.com/220x145" width="220" height="145"  alt="Логотип Makita">
+              <img src="img/manufacturers/logo-makita.png" width="123" height="40"  alt="Логотип Makita">
             </a>
           </li>
           <li>
             <a href="blank.html">
-              <img src="https://via.placeholder.com/220x145" width="220" height="145"  alt="Логотип Dewalt">
+              <img src="img/manufacturers/logo-dewalt.png" width="146" height="44"  alt="Логотип Dewalt">
             </a>
           </li>
           <li>
             <a href="blank.html">
-              <img src="https://via.placeholder.com/220x145" width="220" height="145"  alt="Логотип Интерскол">
+              <img src="img/manufacturers/logo-interskol.png" width="200" height="75"  alt="Логотип Интерскол">
             </a>
           </li>
           <li>
             <a href="blank.html">
-              <img src="https://via.placeholder.com/220x145" width="220" height="145"  alt="Логотип Hitachi">
+              <img src="img/manufacturers/logo-hitachi.png" width="169" height="31"  alt="Логотип Hitachi">
             </a>
           </li>
           <li>
             <a href="blank.html">
-              <img src="https://via.placeholder.com/220x145" width="220" height="145"  alt="Логотип LG">
+              <img src="img/manufacturers/logo-lg.png" width="121" height="73"  alt="Логотип LG">
             </a>
           </li>
           <li>
             <a href="blank.html">
-              <img src="https://via.placeholder.com/220x145" width="220" height="145"  alt="Логотип AEG">
+              <img src="img/manufacturers/logo-aeg.png" width="151" height="98"  alt="Логотип AEG">
             </a>
           </li>
           <li>
             <a href="blank.html">
-              <img src="https://via.placeholder.com/220x145" width="220" height="145"  alt="Логотип Metabo">
+              <img src="img/manufacturers/logo-metabo.png" width="206" height="73"  alt="Логотип Metabo">
             </a>
           </li>
         </ul>
-        <a href="blank.html">Все производители</a>
       </section>  
       <section>
         <h2>Сервисы</h2>
@@ -261,7 +268,7 @@
         <p>Вы можете забрать товар сами, заехав в наш офис:</p>
         <!-- Здесь будет карта -->
         <a href="blank.html">
-          <img src="https://via.placeholder.com/300x158" width="300" height="158" alt="схематическая карта проезда">
+          <img src="img/map.png" width="300" height="158" alt="схематическая карта проезда">
         </a>
         <a href="blank.html">Заблудились? Напишите нам!</a>
       </section>
@@ -269,7 +276,7 @@
     <footer>
       <section>
         <h2>Ссылки на основные разделы сайта</h2>
-        <img src="https://via.placeholder.com/220x68" width="220" height="68" alt="Логотип магазина Техномарт">
+        <img src="img/logo-technomart.svg" width="138" height="23" alt="Логотип магазина Техномарт">
         <ul>
           <li>
             <a href="blank.html">Компания</a>
